best-practices/ml-platform/examples/platform/sandbox/templates/gateway/gateway-external-https.tftpl.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ${gateway_name}
spec:
  addresses:
  - type: NamedAddress
    value: ${address_name}
  gatewayClassName: gke-l7-global-external-managed
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      options:
        networking.gke.io/pre-shared-certs: ${ssl_certificate_name}
